--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <link rel="preload" href="https://fonts.googleapis.com/css?family=Chilanka|La+Belle+Aurore|Literata|Oswald|Ubuntu&display=swap" as="style">
 <link href="https://fonts.googleapis.com/css?family=Chilanka|La+Belle+Aurore|Literata|Oswald|Ubuntu&display=swap" rel="stylesheet">
 <!--end-->
+
 </head>
 <body>
   <section class="menu cid-rRv010iyQr" once="menu" id="menu1-0">
@@ -67,7 +68,7 @@
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbrib-devices mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Products</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/atomicwebsite/" target="_blank"><span class="mbrib-lock mbr-iconfont mbr-iconfont-btn"></span>Atomic | Fallout</a><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/JazzBlocksLibrary/index.html" target="_blank"><span class="mbrib-code mbr-iconfont mbr-iconfont-btn"></span>Blox CSS</a><a class="text-white dropdown-item display-4" href="https://mobirise.co"></a><a class="text-white dropdown-item display-4" href="fruity.html"><span class="mbri-browse mbr-iconfont mbr-iconfont-btn"></span>Fruity (beta)</a><a class="text-white dropdown-item display-4" href="https://biz.borgcreative.com/beta/ads.html" target="_blank"><span class="mbrib-contact-form mbr-iconfont mbr-iconfont-btn"></span>Ads (beta)</a></div>
+                        Products</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/atomicwebsite/" target="_blank"><span class="mbrib-lock mbr-iconfont mbr-iconfont-btn"></span>Atomic | Fallout</a><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/JazzBlocksLibrary/index.html" target="_blank"><span class="mbrib-code mbr-iconfont mbr-iconfont-btn"></span>Blox CSS</a><a class="text-white dropdown-item display-4" href="https://mobirise.co"></a><a class="text-white dropdown-item display-4" href="fruity.html"><span class="mbri-browse mbr-iconfont mbr-iconfont-btn"></span>Fruity (beta)</a><a class="text-white dropdown-item display-4" href="https://biz.borgcreative.com/" target="_blank"><span class="mbrib-contact-form mbr-iconfont mbr-iconfont-btn"></span>Ads (beta)</a></div>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="animation.html" aria-expanded="false"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>
                         Animation</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="research.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-database mbr-iconfont mbr-iconfont-btn"></span>
                         Research</a></li></ul>
@@ -76,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
 
     
 
@@ -153,7 +154,7 @@
         <div class="row main justify-content-center">
             <div class="media-container-column col-12 col-lg-3 col-md-4">
                 <div class="mbr-section-btn align-left py-4"><a class="btn btn-info display-4" href="https://dev.jacobborgprogramming.net/atomicwebsite/" target="_blank"><span class="mbrib-lock mbr-iconfont mbr-iconfont-btn"></span>
-                    Atomic</a> <a class="btn btn-info display-4" href="https://biz.borgcreative.com/beta/ads.html" target="_blank"><span class="mbrib-contact-form mbr-iconfont mbr-iconfont-btn"></span>
+                    Atomic</a> <a class="btn btn-info display-4" href="https://biz.borgcreative.com/" target="_blank"><span class="mbrib-contact-form mbr-iconfont mbr-iconfont-btn"></span>
                     Ads</a> <a class="btn btn-info display-4" href="https://dev.jacobborgprogramming.net/JazzBlocksLibrary/index.html" target="_blank"><span class="mbrib-code mbr-iconfont mbr-iconfont-btn"></span>
                     Blox CSS</a></div>
             </div>
@@ -230,5 +231,6 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  </body>
+  
+</body>
 </html>
