--- a/animation.html
+++ b/animation.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbrib-devices mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Products</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/atomicwebsite/" target="_blank"><span class="mbrib-lock mbr-iconfont mbr-iconfont-btn"></span>Atomic | Fallout</a><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/JazzBlocksLibrary/index.html" target="_blank"><span class="mbrib-code mbr-iconfont mbr-iconfont-btn"></span>Blox CSS</a><a class="text-white dropdown-item display-4" href="https://mobirise.co"></a><a class="text-white dropdown-item display-4" href="fruity.html"><span class="mbri-browse mbr-iconfont mbr-iconfont-btn"></span>Fruity (beta)</a><a class="text-white dropdown-item display-4" href="https://biz.borgcreative.com/" target="_blank"><span class="mbrib-contact-form mbr-iconfont mbr-iconfont-btn"></span>Ads (beta)</a></div>
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="features8 cid-rRxj4vNTxl mbr-parallax-background" id="features8-q">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="features8 cid-rRxj4vNTxl mbr-parallax-background" id="features8-q">
 
     
 
@@ -222,8 +222,8 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   
 </body>
 </html>
