--- a/fruityfeatures.html
+++ b/fruityfeatures.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section info3 cid-rURwtkbNuG mbr-parallax-background" id="info3-1r">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="mbr-section info3 cid-rURwtkbNuG mbr-parallax-background" id="info3-1r">
 
     
 
@@ -296,8 +296,8 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   
 </body>
 </html>
