--- a/research.html
+++ b/research.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="features8 cid-rRviakxLs8 mbr-parallax-background" id="features8-o">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="features8 cid-rRviakxLs8 mbr-parallax-background" id="features8-o">
 
     
 
@@ -165,7 +165,7 @@
                              <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
                                   182508</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
-                                Lines written</h4>
+                                Lines of code written</h4>
                             
                         </div>
                     </div>
