--- a/likewithprivacy.html
+++ b/likewithprivacy.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web maker</a></section><section class="cid-rXHU4fK0eZ mbr-fullscreen mbr-parallax-background" id="header2-28">
+<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="cid-rXHU4fK0eZ mbr-fullscreen mbr-parallax-background" id="header2-28">
 
     
 
@@ -118,7 +118,7 @@
 
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Publish your <strong><em>Like W/ Privacy</em></strong> button any that supports HTML and JavaScript.</p>
+                            Publish your <strong><em>Like W/ Privacy</em></strong> button on any website that supports HTML and JavaScript.</p>
                     </div>
                 </div>
 
