--- a/likewithprivacy.html
+++ b/likewithprivacy.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-rXHU4fK0eZ mbr-fullscreen mbr-parallax-background" id="header2-28">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="cid-rXHU4fK0eZ mbr-fullscreen mbr-parallax-background" id="header2-28">
 
     
 
@@ -102,7 +102,7 @@
 
     <div class="container">
         
-        <h3 class="mbr-section-subtitle pb-3 mbr-fonts-style display-5">When visiting websites with a <strong><em>Like W/ Privacy</em></strong> button, click it! The we will know that someone liked the website. We will never know who you are or where you go from the website.</h3>
+        <h3 class="mbr-section-subtitle pb-3 mbr-fonts-style display-5">When visiting websites with a <strong><em>Like W/ Privacy</em></strong> button, click it! We will know that someone liked the website. We will never know who you are or where you go from the website.</h3>
 
         <div class="media-container-row pt-5">
             <div class="block-content align-right">
