--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu">
-                        Software</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="https://dev.jacobborgprogramming.net/atomicwebsite/" target="_blank">Atomic</a><a class="text-info dropdown-item display-4" href="fruity.html" target="_blank">Fruity (Beta)</a></div>
+                    <a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">
+                        Software</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="https://dev.jacobborgprogramming.net/atomicwebsite/" target="_blank">Atomic</a><a class="text-info dropdown-item display-4" href="fruity.html">Fruity (Beta)</a></div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">
                         Services
-                    </a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="animation.html" target="_blank">Animation</a><a class="text-info dropdown-item display-4" href="https://biz.borgcreative.com/ads.html" target="_blank">Ads (Beta)</a></div>
+                    </a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="animation.html">Animation</a><a class="text-info dropdown-item display-4" href="https://biz.borgcreative.com/ads.html" target="_blank">Ads (Beta)</a></div>
                 </li>
                 
                 <li class="nav-item">
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
+<section class="engine"><a href="https://mobirise.info/b">create your own website for free</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
 
     
 
@@ -161,8 +161,7 @@
             <div class="media-container-column col-12 col-lg-3 col-md-4">
                 <div class="mbr-section-btn align-left py-4"><a class="btn btn-info display-4" href="https://dev.jacobborgprogramming.net/atomicwebsite/" target="_blank"><span class="mbrib-lock mbr-iconfont mbr-iconfont-btn"></span>
                     Atomic</a> <a class="btn btn-info display-4" href="https://biz.borgcreative.com/" target="_blank"><span class="mbrib-contact-form mbr-iconfont mbr-iconfont-btn"></span>
-                    Ads</a> <a class="btn btn-info display-4" href="https://dev.jacobborgprogramming.net/JazzBlocksLibrary/index.html" target="_blank"><span class="mbrib-code mbr-iconfont mbr-iconfont-btn"></span>
-                    Blox CSS</a></div>
+                    Ads</a></div>
             </div>
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
                 <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-2">
